--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wrestling Events Index</title>
+  <title>Event Index</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <main class="container">
     <header class="event-header">
-      <h1>Wrestling Events</h1>
-      <div class="event-time">Index of generated event pages</div>
+      <h1>Event Pages</h1>
+      <div class="event-meta"><div>Generated from EC2026.csv</div></div>
     </header>
     <section class="matches">
       
             <section class="match-card">
               <h2>Elimination Chamber</h2>
               <div class="event-meta">
-                <div><strong>Event ID:</strong> EC2026</div>
-                <div><strong>Date:</strong> 2/28/2026</div>
+                <div><strong>EventID:</strong> EC2026</div>
+                <div><strong>Date:</strong> Saturday, February 28th, 2026</div>
                 <div><strong>Location:</strong> Chicago, IL</div>
               </div>
-              <p style="margin: 12px 0 0;">
-                <a class="event-link" href="event_EC2026.html">Open event page</a>
-              </p>
+              <p style="margin: 12px 0 0;"><a href="event_EC2026.html">Make Picks</a> | <a href="live_EC2026.html">Live Tracker</a></p>
             </section>
             
     </section>
+    <footer class="site-footer">
+      Last updated: February 24, 2026 23:08 UTC
+    </footer>
   </main>
 </body>
 </html>
