--- a/live_EC2026.html
+++ b/live_EC2026.html
@@ -343,8 +343,8 @@
       { match: "Women's Elimination Chamber", wrestler: "Alexa Bliss", odds: 400, result: "L", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 },
       { match: "Women's Elimination Chamber", wrestler: "Asuka", odds: 400, result: "L", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 },
       { match: "Women's Elimination Chamber", wrestler: "Kiana James", odds: 1200, result: "L", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 },
-      { match: "Women's Intercontinental Championship", wrestler: "AJ Lee", odds: -300, result: "", totalPlayerPoints: 60, MertWager: 0, FertWager: 10, GertWager: 0 },
-      { match: "Women's Intercontinental Championship", wrestler: "Becky Lynch", odds: 200, result: "", totalPlayerPoints: 60, MertWager: 5, FertWager: 0, GertWager: 20 },
+      { match: "Women's Intercontinental Championship", wrestler: "AJ Lee", odds: -300, result: "W", totalPlayerPoints: 60, MertWager: 0, FertWager: 10, GertWager: 0 },
+      { match: "Women's Intercontinental Championship", wrestler: "Becky Lynch", odds: 200, result: "L", totalPlayerPoints: 60, MertWager: 5, FertWager: 0, GertWager: 20 },
       { match: "World Heavyweight Championship", wrestler: "CM Punk", odds: -5000, result: "", totalPlayerPoints: 60, MertWager: 10, FertWager: 10, GertWager: 5 },
       { match: "World Heavyweight Championship", wrestler: "Finn Balor", odds: 1200, result: "", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 }
     ];
