--- a/live_EC2026.html
+++ b/live_EC2026.html
@@ -331,12 +331,12 @@
   document.addEventListener("DOMContentLoaded", function () {
     const PLAYERS = ["Mert", "Fert", "Gert"];
     const EVENT_ROWS = [
-      { match: "Men's Elimination Chamber", wrestler: "Cody Rhodes", odds: -200, result: "", totalPlayerPoints: 60, MertWager: 15, FertWager: 0, GertWager: 15 },
-      { match: "Men's Elimination Chamber", wrestler: "Randy Orton", odds: 200, result: "", totalPlayerPoints: 60, MertWager: 5, FertWager: 0, GertWager: 5 },
-      { match: "Men's Elimination Chamber", wrestler: "LA Knight", odds: 300, result: "", totalPlayerPoints: 60, MertWager: 5, FertWager: 10, GertWager: 0 },
-      { match: "Men's Elimination Chamber", wrestler: "Trick Williams", odds: 800, result: "", totalPlayerPoints: 60, MertWager: 0, FertWager: 5, GertWager: 0 },
-      { match: "Men's Elimination Chamber", wrestler: "Je'Von Evans", odds: 800, result: "", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 },
-      { match: "Men's Elimination Chamber", wrestler: "Logan Paul", odds: 900, result: "", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 },
+      { match: "Men's Elimination Chamber", wrestler: "Cody Rhodes", odds: -200, result: "L", totalPlayerPoints: 60, MertWager: 15, FertWager: 0, GertWager: 15 },
+      { match: "Men's Elimination Chamber", wrestler: "Randy Orton", odds: 200, result: "W", totalPlayerPoints: 60, MertWager: 5, FertWager: 0, GertWager: 5 },
+      { match: "Men's Elimination Chamber", wrestler: "LA Knight", odds: 300, result: "L", totalPlayerPoints: 60, MertWager: 5, FertWager: 10, GertWager: 0 },
+      { match: "Men's Elimination Chamber", wrestler: "Trick Williams", odds: 800, result: "L", totalPlayerPoints: 60, MertWager: 0, FertWager: 5, GertWager: 0 },
+      { match: "Men's Elimination Chamber", wrestler: "Je'Von Evans", odds: 800, result: "L", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 },
+      { match: "Men's Elimination Chamber", wrestler: "Logan Paul", odds: 900, result: "L", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 },
       { match: "Women's Elimination Chamber", wrestler: "Rhea Ripley", odds: -300, result: "W", totalPlayerPoints: 60, MertWager: 10, FertWager: 15, GertWager: 0 },
       { match: "Women's Elimination Chamber", wrestler: "Raquel Rodriguez", odds: 125, result: "L", totalPlayerPoints: 60, MertWager: 5, FertWager: 0, GertWager: 0 },
       { match: "Women's Elimination Chamber", wrestler: "Tiffany Stratton", odds: 150, result: "L", totalPlayerPoints: 60, MertWager: 5, FertWager: 10, GertWager: 15 },
@@ -345,8 +345,8 @@
       { match: "Women's Elimination Chamber", wrestler: "Kiana James", odds: 1200, result: "L", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 },
       { match: "Women's Intercontinental Championship", wrestler: "AJ Lee", odds: -300, result: "W", totalPlayerPoints: 60, MertWager: 0, FertWager: 10, GertWager: 0 },
       { match: "Women's Intercontinental Championship", wrestler: "Becky Lynch", odds: 200, result: "L", totalPlayerPoints: 60, MertWager: 5, FertWager: 0, GertWager: 20 },
-      { match: "World Heavyweight Championship", wrestler: "CM Punk", odds: -5000, result: "", totalPlayerPoints: 60, MertWager: 10, FertWager: 10, GertWager: 5 },
-      { match: "World Heavyweight Championship", wrestler: "Finn Balor", odds: 1200, result: "", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 }
+      { match: "World Heavyweight Championship", wrestler: "CM Punk", odds: -5000, result: "W", totalPlayerPoints: 60, MertWager: 10, FertWager: 10, GertWager: 5 },
+      { match: "World Heavyweight Championship", wrestler: "Finn Balor", odds: 1200, result: "L", totalPlayerPoints: 60, MertWager: 0, FertWager: 0, GertWager: 0 }
     ];
 
     const cards = Array.from(document.querySelectorAll(".match-card"));
